头像图片链接
头像图片链接

--- a/source/widget/Mall.FindTeacher/find-teacher.html
+++ b/source/widget/Mall.FindTeacher/find-teacher.html
@@ -22,11 +22,13 @@
     <div class="find-teacher-list">
         <div class="find-teacher-card">
             <div class="find-teacher-intro">
-                <div class="find-teacher-hover-container">
-                    <img src="img/teacher-photo.png" class="find-teacher-photo"/>
-                </div>
+                <a href="#">
+                    <div class="find-teacher-hover-container">
+                        <img src="img/teacher-photo.png" class="find-teacher-photo"/>
+                    </div>
+                </a>
                 <div class="find-teacher-information">
-                    <span class="find-teacher-name">顾斐</span>
+                    <a href="#" ><span class="find-teacher-name">顾斐</span></a>
                     <img src="img/v.png" class="find-teacher-v"/>
                     <span class="find-teacher-sort">数学老师</span>
                 </div>
