--- a/source/widget/UM.mobile.phone/exist.user.html
+++ b/source/widget/UM.mobile.phone/exist.user.html
@@ -78,7 +78,7 @@
         /* 火狐浏览器刷新之后的界面不同的处理 */
         !function(){
             $('#phone').val('');
-            $('#password').val('');
+            $('#curPwd').val('');
             $('#grade').val('')
             $('#verificationCode').val('');
             $('#phonecode').val('');
@@ -86,4 +86,3 @@
     </script>
 </body>
 </html>
-
