头像上传兼容

--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -37,7 +37,7 @@
                             <span><img id="imghead" src='img/headp.jpg'></span>
                         </div>
                         <div class="btn_up">
-                            <button class="btn_loadFile btn btn-info">+ 上传头像</button>
+                            <button id="upload_img" class="btn_loadFile btn btn-info">+ 上传头像</button>
                         </div>
                         <input id="loadFile" type="file" name="img" class="input_file" onchange="getFullPath(this);" />
                         <em>每次上传消耗3000金币</em>
