--- a/source/widget/UserHome.wrongQues/chooseGrade.html
+++ b/source/widget/UserHome.wrongQues/chooseGrade.html
@@ -6,72 +6,97 @@
     <title>错题本-欢迎来到学而思网校</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link href="normalize.css" type="text/css" rel="stylesheet" />
-    <link href="foundation.min.css" type="text/css" rel="stylesheet" />
-    <link href="error_question.css" type="text/css" rel="stylesheet"/>
+    <link href="../Public.Selector/selector.less" type="text/css" rel="stylesheet"/>
     <!--[if lt IE 9]>
     <link href="ie_project.css" type="text/css" rel="stylesheet"/>
     <![endif]-->
 </head>
 <body>
 <div class="small-11 large-10 columns">
-    <div class="choice columns">
-        <div class="choice-grade">
-            <div class="choice-grade-tip small-3 large-1 columns">所在年级</div>
-            <div class="choice-grade-cur small-6 large-8 columns">
-                <span class="choice-grade-name">一年级</span>
-                <span class="choice-grade-name select-grade">二年级</span>
-                <span class="choice-grade-name">三年级</span>
-                <span class="choice-grade-name">四年级</span>
-                <span class="choice-grade-name">五年级</span>
-                <span class="choice-grade-name">六年级</span>
-                <span class="choice-grade-name">初一</span>
-                <span class="choice-grade-name">初二</span>
-                <span class="choice-grade-name">初三</span>
-                <span class="choice-grade-name">高一</span>
-                <span class="choice-grade-name">高二</span>
-                <span class="choice-grade-name">高三</span>
-            </div>
-            <div class="small-3 large-3 columns"></div>
-        </div>
-        <div class="choice-subject columns">
-            <div class="choice-subject-tip small-3 large-1 columns">学习科目</div>
-            <div class="choice-subject-cur small-6 large-8 columns">
-                <span class="choice-subject-name">全部</span>
-                <span class="choice-subject-name select-subject">语文</span>
-                <span class="choice-subject-name">数学</span>
-                <span class="choice-subject-name">英语</span>
-            </div>
-            <div class="small-3 large-3 columns"></div>
-        </div>
-        <div class="choice-point columns">
-            <div class="choice-point-tip small-3 large-1 columns">知识点</div>
-            <div class="choice-point-cur small-6 large-7 columns">
-                <span class="choice-point-name">代数法</span><span class="choice-point-name select-point">物质的检验</span><span
-                    class="choice-point-name">三角函数</span><span class="choice-point-name">数论</span><span
-                    class="choice-point-name">图论</span><span class="choice-point-name">数学分析</span><span
-                    class="choice-point-name">高等代数</span><span class="choice-point-name">大学英语</span><span
-                    class="choice-point-name">TOFFEL</span><span class="choice-point-name">IELTS</span><span
-                    class="choice-point-name">平行</span><span class="choice-point-name">计算机基础</span><span
-                    class="choice-point-name">社会学</span><span class="choice-point-name">新闻学</span><span
-                    class="choice-point-name">机器学习</span><span class="choice-point-name">数据挖掘</span><span
-                    class="choice-point-name">MOOC</span><span class="choice-point-name">C语言</span><span
-                    class="choice-point-name">JAV</span><span class="choice-point-name">C#</span><span
-                    class="choice-point-name">数据结构</span><span class="choice-point-name">伦理学</span><span
-                    class="choice-point-name">公共关系学</span><span class="choice-point-name">数学建模</span><span
-                    class="choice-point-name">英语四级</span><span class="choice-point-name">英语六级</span><span
-                    class="choice-point-name">大话西游</span><span class="choice-point-name">JavaScript设计模式</span><span
-                    class="choice-point-name">格斗</span><span class="choice-point-name">拳皇</span><span
-                    class="choice-point-name">前端工程</span>
-            </div>
-            <div class="choice-point-link small-3 large-4 columns clearfix">
-                <div class="chocie-point-show left">
-                    <span>更多</span>
-                    <img src="img/arrow_down.png" alt=""/>
+    <div class="choice">
+      <div class="row">
+        <dl class="choice-grade clearfix">
+            <dt class="choice-grade-tip col-xs-2 col-sm-2 clo-md-1 ">所在年级</dt>
+            <dd class="choice-grade-cur col-xs-10 col-sm-10 clo-md-11 ">
+                <ul class="nav nav-pills">
+                  <li role="presentation" class="active"><a href="#" class="choice-grade-name">全部</a></li>
+                  <li role="presentation"><a class="choice-grade-name" href="#">一年级</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">二年级</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">三年级</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">四年级</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">五年级</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">六年级</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">初一</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">初二</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">初三</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">高一</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">高二</a></li>
+                  <li role="presentation"><a href="#" class="choice-grade-name">高三</a></li>
+                </ul>    
+            </dd>
+        </dl>
+      </div>
+      <div class="row">
+        <dl class="choice-subject clearfix">
+            <dt class="choice-subject-tip col-xs-2 col-sm-2 col-md-1 ">学习科目</dt>
+            <dd class="choice-subject-cur col-xs-10 col-sm-10 col-md-11 ">
+              <ul class="nav nav-pills">
+                <li role="presentation" class="active"><a class="choice-subject-name">全部</a></li>
+                <li role="presentation"><a class="choice-subject-name">语文</a></li>
+                <li role="presentation"><a class="choice-subject-name">数学</a></li>
+                <li role="presentation"><a class="choice-subject-name">英语</a></li>
+              </ul>
+            </dd>
+        </dl>
+      </div>
+      <div class="row">
+        <dl class="choice-point clearfix">
+            <dt class="choice-point-tip col-xs-1 col-sm-2 col-md-1 ">知识点</dt>
+            <dd class="choice-point-cur col-xs-8 col-sm-8 col-md-9 ">
+              <ul class="nav nav-pills">
+                <li role="presentation"><a class="choice-point-name">代数法</a></li>
+                <li role="presentation" class="active"><a class="choice-point-name">物质的检验</a></li>
+                <li role="presentation"><a class="choice-point-name">三角函数</a></li>
+                <li role="presentation"><a class="choice-point-name">数论</a></li>
+                <li role="presentation"><a class="choice-point-name">图论</a></li>
+                <li role="presentation"><a class="choice-point-name">数学分析</a></li>
+                <li role="presentation"><a class="choice-point-name">高等代数</a></li>
+                <li role="presentation"><a class="choice-point-name">大学英语</a></li>
+                <li role="presentation"><a class="choice-point-name">TOFFEL</a></li>
+                <li role="presentation"><a class="choice-point-name">IELTS</a></li>
+                <li role="presentation"><a class="choice-point-name">平行</a></li>
+                <li role="presentation"><a class="choice-point-name">计算机基础</a></li>
+                <li role="presentation"><a class="choice-point-name">社会学</a></li>
+                <li role="presentation"><a class="choice-point-name">新闻学</a></li>
+                <li role="presentation"><a class="choice-point-name">机器学习</a></li>
+                <li role="presentation"><a class="choice-point-name">数据挖掘</a></li>
+                <li role="presentation"><a class="choice-point-name">MOOC</a></li>
+                <li role="presentation"><a class="choice-point-name">C语言</a></li>
+                <li role="presentation"><a class="choice-point-name">JAV</a></li>
+                <li role="presentation"><a class="choice-point-name">C#</a></li>
+                <li role="presentation"><a class="choice-point-name">数据结构</a></li>
+                <li role="presentation"><a class="choice-point-name">伦理学</a></li>
+                <li role="presentation"><a class="choice-point-name">公共关系学</a></li>
+                <li role="presentation"><a class="choice-point-name">数学建模</a></li>
+                <li role="presentation"><a class="choice-point-name">英语四级</a></li>
+                <li role="presentation"><a class="choice-point-name">英语六级</a></li>
+                <li role="presentation"><a class="choice-point-name">大话西游</a></li>
+                <li role="presentation"><a class="choice-point-name">JavaScript设计模式</a></li>
+                <li role="presentation"><a class="choice-point-name">格斗</a></li>
+                <li role="presentation"><a class="choice-point-name">拳皇</a></li>
+                <li role="presentation"><a class="choice-point-name">前端工程</a></li>
+              </ul>
+                    
+            </dd>
+            <dt class="choice-point-link col-xs-3 col-sm-2 col-md-2  clearfix">
+                <div class="chocie-point-show pull-left">
+                    <a>更多知识点</a>
+                    <i class="fa fa-angle-down fa-chevron-down que-body-arrow"></i>
                 </div>
                 <!--<div class="chocie-point-download left">下载复习笔记</div>-->
-            </div>
-        </div>
+            </dt>
+        </dl>
+      </div>
     </div>
     <!--showError.html-->
 </div>
