--- a/source/widget/UM.none/index.html
+++ b/source/widget/UM.none/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="none-content">
         <div class="nc-center">
-            <img src="img/none_record.png" alt="">
+            <img src="/static/img/none_record.png" alt="">
             <p>你还没有XX记录</p>
         </div>
     </div>
