--- a/source/widget/UM.money/index.html
+++ b/source/widget/UM.money/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="gift-card-record">
          <button class="gcr-top-up btn btn-info">去激活</button>
-         <table class="table gcr-table">
+         <table id="moneyTable" class="table gcr-table">
             <thead>
                 <tr>
                     <th>卡号</th>
@@ -26,21 +26,21 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="cloneajaxtr">
                     <td>s201509190726</td>
                     <td>2015-09-21</td>
                     <td>2015-09-21</td>
                     <td>50</td>
                     <td>未使用</td>
                 </tr>
-                <tr>
+                <tr class="cloneajaxtr">
                     <td>s201509190726</td>
                     <td>2015-09-21</td>
                     <td>2015-09-21</td>
                     <td>50</td>
                     <td class="gcr-red">使用中</td>
                 </tr>
-                <tr>
+                <tr class="cloneajaxtr">
                     <td>s201509190726</td>
                     <td>2015-09-21</td>
                     <td>2015-09-21</td>
