--- a/source/widget/UM.balance/index.html
+++ b/source/widget/UM.balance/index.html
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr id="cloneajax">
+                <tr class="cloneajax">
                     <td></td>
                     <td></td>
                     <td></td>
