Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UM.card.learn/index.html
+++ b/source/widget/UM.card.learn/index.html
@@ -31,7 +31,7 @@
                      <div class="cl-content-right">
                          <div>
                              <label for="">密码：</label>
-                             <input class="studyCardPwd" type="password">
+                             <input class="studyCardPwd" type="text">
                          </div>
                          <div class="error-box">
                              <span class="studyCardPwd-warning error"></span>
@@ -55,10 +55,10 @@
                      </div>
                  </div>
              </div>
-             <div class="cl-bank" style="display:none;">
+             <div class="cl-bank">
                  <div class="cl-input">
                      <span>充值金额：</span>
-                     <input type="text">
+                     <input id="bankpay" type="text">
                      <span>元</span>
                      <p>只能填写大于等于10，小于等于50000 的整数金额</p>
                      <button class="cl-btn btn btn-info">下一步</button>
@@ -170,9 +170,9 @@
                              <span>更多银行</span>
                          </p>
                      </div>
-                      <div class="formPastPayment">
-                     <button class="cl-btn btn btn-info" type="button">去充值</button>
-                 </div>
+                     <div class="formPastPayment">
+                        <button class="cl-btn btn btn-info" type="button">去充值</button>
+                     </div>
                  </div>
                 
                  <div class="prompt-box">
