--- a/source/data/gold/gold-card-modal.html
+++ b/source/data/gold/gold-card-modal.html
@@ -1,5 +1,5 @@
 <div class='red-card-tip'></div>
-<div class='red-card-box'>
+<div class='red-card-box' id="51">
     <img src='/static/img/Modal-red-card.png' />
     <div class='red-card-intro'>
         <span class='red-card-name'>红名卡</span>
