--- a/source/data/gold/gold-present-modal.html
+++ b/source/data/gold/gold-present-modal.html
@@ -1,5 +1,5 @@
 <div class="present-card-tip"></div>
-<div class="present-box">
+<div class="present-box" id="61">
     <img src="/static/img/Modal-present.png"/>
     <div class="present-intro"><span class="present-name">清华大学扑克牌</span>
         <div class="present-intro-name">
