button更改去除火狐边框

--- a/source/widget/UM.all.order/index.html
+++ b/source/widget/UM.all.order/index.html
@@ -60,7 +60,7 @@
                     <li class="ao-third ao-li">待支付</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-danger">立即支付</button>
+                            <span class="btn btn-danger">立即支付</span>
                             <span>
                                 <a href="#">查看详情</a>
                                 <a href="#">取消订单</a>
@@ -89,7 +89,7 @@
                     <li class="ao-third ao-li">已完成</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-info">查看详情</button>
+                            <span class="btn btn-info">查看详情</span>
                         </div>
                     </li>
                 </ul>
@@ -114,7 +114,7 @@
                     <li class="ao-third ao-li">已取消</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-danger" data-toggle="modal" data-target="#orderModal" onclick="orderModal();">重新购买</button>
+                            <span class="btn btn-danger" data-toggle="modal" data-target="#orderModal" onclick="orderModal();">重新购买</span>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
@@ -142,7 +142,7 @@
                     <li class="ao-third ao-li">待审核</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-info">查看详情</button>
+                            <span class="btn btn-info">查看详情</span>
                             <span>
                                 <a href="#">取消订单</a>
                             </span>
@@ -170,7 +170,7 @@
                     <li class="ao-third ao-li">待收货</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-danger">确认收货</button>
+                            <span class="btn btn-danger">确认收货</span>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
@@ -198,7 +198,7 @@
                     <li class="ao-third ao-li">待发货</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-info">查看详情</button>
+                            <span class="btn btn-info">查看详情</span>
                         </div>
                     </li>
                 </ul>
@@ -223,7 +223,7 @@
                     <li class="ao-third ao-li">审核未通过</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <button class="btn btn-info">查看详情</button>
+                            <span class="btn btn-info">查看详情</span>
                         </div>
                     </li>
                 </ul>
