--- a/source/widget/UM.mobile.phone/index.html
+++ b/source/widget/UM.mobile.phone/index.html
@@ -43,7 +43,7 @@
                 <p>短信验证码：</p>
                 <input id="phonecode" name="code" type="text"/>
                 <label for="phonecode" class="phonecode-tip">请输入短信验证码</label>
-                <button class="vcode btn btn-info" id="vcode">获取短信验证码</button>
+                <span class="vcode btn btn-info" id="vcode">获取短信验证码</span>
             </div>
             <div class="error-box">
                 <span id="tips-phonecode" class="tips error"></span>
@@ -62,7 +62,7 @@
         </div>
 
         <div>
-            <button id="mpform_submit" class="btn btn-info" name="submit" type="submit">保存</button>
+            <span id="mpform_submit" class="btn btn-info" name="submit" type="submit">保存</span>
         </div>      
     </div>
     <!-- 这是jquery库文件 -->
