--- a/source/widget/UM.third.bind/index.html
+++ b/source/widget/UM.third.bind/index.html
@@ -19,12 +19,12 @@
             <li class="app-qq unbounded">
                 <h5>腾讯QQ</h5>
                 <span>未绑定</span>
-                <button class="btn btn-info">立即绑定</button>
+                <span class="btn btn-info">立即绑定</span>
             </li>
             <li class="app-weixin unbounded">
                 <h5>腾讯微信</h5>
                 <span>未绑定</span>
-                <button class="btn btn-info">立即绑定</button>
+                <span class="btn btn-info">立即绑定</span>
             </li>
             <li class="app-weibo bounded">
                 <h5>新浪微博</h5>
