--- a/source/widget/UM.Basic.information/index.html
+++ b/source/widget/UM.Basic.information/index.html
@@ -70,7 +70,7 @@
                         <span class="school-warning error"></span>
                     </div>
                 </div>
-                <button class="btn-submit btn btn-info" name="submit" type="submit">保存</button>
+                <span class="btn-submit btn btn-info" name="submit" type="submit">保存</span>
             </div>
         <div class="bi-right">
             <span>真实姓名、性别、所在地、年级等基本资料如需修改请拨打客服电话：<em>400-800-2211</em></span>
