--- a/source/widget/UM.balance/index.html
+++ b/source/widget/UM.balance/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="balance-record">
          <span>我的账户余额<em>1000.0</em>元</span>
-         <button class="balance-btn btn btn-info">去充值</button>
+         <span class="balance-btn btn btn-info">去充值</span>
          <table id="generatedTable" class="table br-table">
             <thead>
                 <tr>
