--- a/source/widget/UM.card.learn/index.html
+++ b/source/widget/UM.card.learn/index.html
@@ -36,7 +36,7 @@
                          <div class="error-box">
                              <span class="studyCardPwd-warning error"></span>
                          </div>
-                         <button class="btn-pay btn btn-info">充值</button>
+                         <span class="btn-pay btn btn-info">充值</span>
                          <a href="">查看充值记录</a>
                      </div>
                  </div>
@@ -61,7 +61,7 @@
                      <input id="bankpay" type="text">
                      <span>元</span>
                      <p>只能填写大于等于10，小于等于50000 的整数金额</p>
-                     <button class="cl-btn btn btn-info">下一步</button>
+                     <span class="cl-btn btn btn-info">下一步</span>
                  </div>
                  <div class="payment_bank">
                      <div class="recharge_sum">充值金额：<strong>100</strong>元</div>
@@ -171,7 +171,7 @@
                          </p>
                      </div>
                      <div class="formPastPayment">
-                        <button class="cl-btn btn btn-info" type="button">去充值</button>
+                        <span class="cl-btn btn btn-info" type="button">去充值</span>
                      </div>
                  </div>
                 
