--- a/source/widget/UM.certificate/index.html
+++ b/source/widget/UM.certificate/index.html
@@ -35,7 +35,7 @@
                 <span class="serialPass-warning error"></span>
             </div>
 
-            <button class="btn-certificate btn btn-info">激活</button>
+            <span class="btn-certificate btn btn-info">激活</span>
         </div>
     </div>
     <div class="prompt-box">
