--- a/source/widget/UM.money/index.html
+++ b/source/widget/UM.money/index.html
@@ -14,7 +14,7 @@
     <link href="money.css" rel="stylesheet"></head>
 <body>
     <div class="gift-card-record">
-         <button class="gcr-top-up btn btn-info">去激活</button>
+         <span class="gcr-top-up btn btn-info">去激活</span>
          <table id="moneyTable" class="table gcr-table">
             <thead>
                 <tr>
