--- a/source/widget/UM.Basic.information/bi-perfect.html
+++ b/source/widget/UM.Basic.information/bi-perfect.html
@@ -44,16 +44,13 @@
                 <div>
                     <div id="date" data-date="2012-10-1">
                         <label for="">生日：</label>
-                        <select id="year" class="year" name="year" >
-                          <option>请选择</option>
+                        <select id="year" name="year" >
                         </select>
                         <i>年</i>
-                        <select id="month" class="month" name="month" >
-                          <option>请选择</option>
+                        <select id="month" name="month" >
                         </select>
                         <i>月</i>
-                        <select id="day" class="day" name="day">
-                          <option>请选择</option>
+                        <select id="day" name="day">
                         </select>
                         <i>日</i>
                     </div>
@@ -79,17 +76,17 @@
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
     <!-- 这是当前模块js文件 -->
+    <script type="text/javascript" src="birthday.js"></script>
     <script type="text/javascript" src="basic-information.js"></script>
-    <script>
-        /* 火狐浏览器刷新之后的界面不同的处理 */
-        !function(){
-            $('#phone').val('');
-            $('#password').val('');
-            $('#grade').val('')
-            $('#verificationCode').val('');
-            $('#phonecode').val('');
-        }();
-    </script>
+    <script>  
+    $(function () {
+        $.ms_DatePicker({
+                YearSelector: "#year",
+                MonthSelector: "#month",
+                DaySelector: "#day"
+        });
+        $.ms_DatePicker();
+    }); 
+    </script> 
 </body>
 </html>
-
