--- a/source/widget/UM.Basic.information/index.html
+++ b/source/widget/UM.Basic.information/index.html
@@ -85,9 +85,9 @@
     <script>  
     $(function () {
         $.ms_DatePicker({
-                YearSelector: ".sel_year",
-                MonthSelector: ".sel_month",
-                DaySelector: ".sel_day"
+                YearSelector: "#year",
+                MonthSelector: "#month",
+                DaySelector: "#day"
         });
         $.ms_DatePicker();
     }); 
