--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -19,7 +19,7 @@
           <li><a href="#">本地上传</a></li>
         </ul>
         <div class="hp-box-left">
-            <div class="hp-recommend">
+            <div class="hp-recommend active">
                 <div class="hpr-box">
                     <img class="hpr-img" src="http://tx.haiqq.com/uploads/allimg/150321/110H2E40-6.jpg" data-id="12" alt="头像">
                     <img class="hpr-img" src="img/head.photo.png" alt="头像">
