Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/data/Dynamic/coment.html
+++ b/source/data/Dynamic/coment.html
@@ -33,3 +33,13 @@
         </div>
     </div>
 </div>
+<!--置顶线条开始-->
+<div class="fresh-comment-line">
+ <span class="fresh-line-tip">以上<strong>5</strong> 条评论被老师置顶奖励</span>
+</div>
+<!--置顶线条结束-->
+<!--更多评论结束-->
+<div class="fresh-comment-more">
+   <a target="_blank" href="###">更多评论</a>
+</div>
+<!--更多评论结束-->
