--- a/source/widget/UM.Basic.information/bi-perfect.html
+++ b/source/widget/UM.Basic.information/bi-perfect.html
@@ -42,7 +42,7 @@
                     <em>网校会在每年7月1日自动为你更新年级</em>
                 </div>
                 <div>
-                    <div id="date" data-date="2012-10-1">
+                    <div id="date">
                         <label for="">生日：</label>
                         <select id="year" name="year" >
                         </select>
