--- a/source/widget/UM.Basic.information/index.html
+++ b/source/widget/UM.Basic.information/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div>
                     <label for="">昵称：</label>
-                    <input class="nickname" type="text" maxlength="18" data-nickname=""/>
+                    <input class="nickname" type="text" maxlength="18" data-nickname="" autocomplete="off"/>
                     <div class="error-box">
                         <span class="nickname-warning error"></span>
                     </div>
@@ -46,7 +46,7 @@
                     <em>网校会在每年7月1日自动为你更新年级</em>
                 </div>
                 <div>
-                    <div id="date" data-date="2012-10-1">
+                    <div id="date">
                         <label for="">生日：</label>
                         <select id="year" name="year" >
                         </select>
@@ -65,7 +65,7 @@
                 </div>
                 <div>
                     <label for="school">学校：</label>
-                    <input class="school" type="text" maxlength="50">
+                    <input class="school" type="text" maxlength="50" autocomplete="off"/>
                     <div class="error-box">
                         <span class="school-warning error"></span>
                     </div>
