--- a/source/widget/UM.Basic.information/bi-perfect.html
+++ b/source/widget/UM.Basic.information/bi-perfect.html
@@ -61,7 +61,7 @@
                 </div>
                 <div>
                     <label for="school">学校：</label>
-                    <input class="school" type="text" maxlength="50">
+                    <input class="school" type="text" maxlength="50" autocomplete="off">
                     <div class="error-box">
                         <span class="school-warning error"></span>
                     </div>
