--- a/source/widget/UM.mobile.phone/exist.user.html
+++ b/source/widget/UM.mobile.phone/exist.user.html
@@ -66,7 +66,7 @@
             </div>
 
             <div>
-                <sapn id="mpform_submit" class="btn btn-info" name="submit" type="submit">保存</sapn>
+                <button id="mpform_submit" class="btn btn-info" name="submit" type="submit">保存</button>
             </div>      
         </div>
     <!-- 这是jquery库文件 -->
