--- a/source/widget/UM.password/index.html
+++ b/source/widget/UM.password/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <span id="form_submit" class="btn btn-info" name="submit" type="submit">保存</span>     
+        <button id="form_submit" class="btn btn-info" name="submit" type="submit">保存</button>     
     </div>
     <!-- 这是jquery库文件 -->
     <script type="text/javascript" src="../../lib/jQuery/1.11.1/jquery.min.js"></script>
