--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="hp-local">
                 <form action="" method="POST" enctype="multipart/form-data" id="headsImg">
-                    <div class="message-error">
+                    <div class="img-error">
                         <span></span>
                     </div>
                     <div class="hl-box">
