--- a/source/widget/UM.order/index.html
+++ b/source/widget/UM.order/index.html
@@ -51,7 +51,28 @@
                 <ul class="goods-content">
                     <li class="gt-first">
                         <div class="order-teacher">
-                            <img src="img/order-teacher.png" alt="">
+                            <div class=" teacher-main teacher-main-border majar-items">
+                                <ul class="avatar-items">
+                                    <li>
+                                        <a class="avatar-photo">
+                                            <img src="img/order-teacher.png">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="avatar-photo">
+                                            <img src="img/order-teacher.png">
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="avatar-roll">
+                                    <a href="javascript:void(0);" class="prev none">
+                                        <em class="icon-chevron-left">左</em>
+                                    </a>
+                                    <a href="javascript:void(0);" class="next">
+                                        <em class="icon-chevron-right">右</em>
+                                    </a>
+                                </div>
+                            </div>
                             <em>语文</em>
                             <span>[课程升级] 2015学年五升六年级奥数年卡（竞赛班）</span>
                             <p>顾斐老师</p>
