--- a/source/widget/UM.all.order/order.modal.html
+++ b/source/widget/UM.all.order/order.modal.html
@@ -43,6 +43,7 @@
               <p>顾斐老师</p>
               <strong>排期过期</strong>
           </div>
+          <div class="shade"></div>
         </div> 
     </div>
     <div class="om-footer">
