--- a/source/widget/UM.all.order/index.html
+++ b/source/widget/UM.all.order/index.html
@@ -89,7 +89,7 @@
                     <li class="ao-third ao-li">待支付</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <span class="btn btn-danger">立即支付</span>
+                            <a class="btn btn-danger" href="#">立即支付</a>
                             <span>
                                 <a href="#">查看详情</a>
                                 <a href="#">取消订单</a>
@@ -126,7 +126,7 @@
                     <li class="ao-third ao-li">已完成</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <span class="btn btn-info">查看详情</span>
+                            <a class="btn btn-info" href="#">查看详情</a>
                         </div>
                     </li>
                 </ul>
@@ -159,7 +159,7 @@
                     <li class="ao-third ao-li">已取消</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <span class="btn btn-danger" data-toggle="modal" data-target="#orderModal" onclick="orderModal();">重新购买</span>
+                            <a class="btn btn-danger" href="#" data-toggle="modal" data-target="#orderModal" onclick="orderModal();">重新购买</a>
                             <span>
                                 <a href="#">查看详情</a>
                             </span>
@@ -195,7 +195,7 @@
                     <li class="ao-third ao-li">待审核</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <span class="btn btn-info">查看详情</span>
+                            <a class="btn btn-info" href="#">查看详情</a>
                             <span>
                                 <a href="#">取消订单</a>
                             </span>
@@ -231,10 +231,7 @@
                     <li class="ao-third ao-li">待收货</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <span class="btn btn-danger">确认收货</span>
-                            <span>
-                                <a href="#">查看详情</a>
-                            </span>
+                            <a class="btn btn-info" href="#">查看详情</a>
                         </div>
                     </li>
                 </ul>
@@ -267,7 +264,7 @@
                     <li class="ao-third ao-li">待发货</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <span class="btn btn-info">查看详情</span>
+                            <a class="btn btn-info" href="#">查看详情</a>
                         </div>
                     </li>
                 </ul>
@@ -300,7 +297,7 @@
                     <li class="ao-third ao-li">审核未通过</li>
                     <li class="ao-li">
                         <div class="ao-operation">
-                            <span class="btn btn-info">查看详情</span>
+                            <a class="btn btn-info" href="#">查看详情</a>
                         </div>
                     </li>
                 </ul>
