--- a/source/data/gold/gold-present-modal.html
+++ b/source/data/gold/gold-present-modal.html
@@ -111,7 +111,7 @@
             <p>
                 <label></label>
                 <input type="hidden" autocomplete="off" id="add_id" value="0">
-                <a href="javascript:void(0);" id="address_submit_btn" class="btn btn_red">保存收货人信息</a>
+                <a href="javascript:void(0);" id="gold_address_submit_btn" class="btn btn_red">保存收货人信息</a>
             </p>
             <p class="error_tips_address"></p>
         </div>
