听课页修改

--- a/source/widget/UserHome.learning/study-course.html
+++ b/source/widget/UserHome.learning/study-course.html
@@ -84,6 +84,69 @@
 						</li>
 						<li class="">
 							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
+								<span class="icon-sign">
+									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第1讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
+								</span>
+							</p>
+						</li>
+						<li class="">
+							<p class="icon-corner">
 								<span>
 									<a href="http://www.xueersi.com/MyCourses/courseStudy/8704-37274-67176/359e751d0e0e42ea09384e7326918ed1" title="神奇峡谷欢迎你：轻轻松松学拼音（1）">第2讲 神奇峡谷欢迎你：轻轻松松学拼音（1）</a>
 								</span>
