第三方绑定

--- a/source/widget/UM.third.bind/index.html
+++ b/source/widget/UM.third.bind/index.html
@@ -30,13 +30,13 @@
                 <h5>新浪微博</h5>
                 <span>已绑定</span>
                 <p>绑定账号：<a class="app-user" href="#">快乐的小鸟</a></p>
-                <a href="#">解除绑定</a>
+                <a id="boundedBtn" href="#" onclick="return sure();">解除绑定</a>
             </li>
             <li class="app-jia bounded">
                 <h5>家长帮</h5>
                 <span >已绑定</span>
                 <p>绑定账号：<a class="app-user" href="#">快乐的小鸟</a></p>
-                <a href="#">解除绑定</a>
+                <a id="boundedBtn" href="#" onclick="return sure();">解除绑定</a>
             </li>
         </ul>
 
