--- a/source/widget/UM.card.learn/index.html
+++ b/source/widget/UM.card.learn/index.html
@@ -13,7 +13,7 @@
     <!-- 这是当前模块样式文件 -->
     <link href="card.learn.css" rel="stylesheet"></head>
 <body>
-    <div class="gift-card-record">
+    <div class="gift-card">
          <ul id="pay_tab">
              <li class="current">
                  <a href="#">学习卡充值</a>
