--- a/source/data/gold/gold-card-modal.html
+++ b/source/data/gold/gold-card-modal.html
@@ -1,14 +1,15 @@
 <div class='red-card-tip'></div>
 <div class='red-card-box' id="51">
-    <img src='/static/img/Modal-red-card.png' />
+    <div class="gold-modal-img"><img src='http://x01.xesimg.com:81/file/award/2015/12/18/14504105156721.jpg' /></div>
     <div class='red-card-intro'>
         <span class='red-card-name'>红名卡</span>
         <div class='red-card-intro-name'>
             <span class='red-card-intro-title'>数<span>量 ：</span></span>
-            <div class='red-card-num'>1</div><span>仅剩 <em>19</em> 张</span></div>
+            <div class="red-card-dec"><p class="p1"></p></div><div class='red-card-num'>1</div><div class="red-card-add"><p class="p1"></p><p class="p2"></p></div>
+            <span class="red-card-piece">仅剩 <em>19</em> 张</span></div>
         <div class='red-card-intro-name'>
             <span class='red-card-intro-title'>兑换额 ：</span>
-            <span><em>260</em>金币</span>
+            <span class="red-card-intro-gold"><em>260</em>金币</span>
         </div>
         <div class='red-card-intro-name'>
             <span class='red-card-intro-title'>等<span>级 ：</span></span>
