--- a/source/data/gold/gold-present-modal.html
+++ b/source/data/gold/gold-present-modal.html
@@ -1,6 +1,6 @@
 <div class="present-card-tip"></div>
 <div class="present-box" id="61">
-    <img src="/static/img/Modal-present.png"/>
+    <div class="gold-modal-img"><img src="/static/img/Modal-present.png"/></div>
     <div class="present-intro"><span class="present-name">清华大学扑克牌</span>
         <div class="present-intro-name">
             <span class="present-intro-title">描<span>述 ：</span></span>
