--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -16,7 +16,7 @@
     <div class="hp-content">
         <ul id="head_tab">
           <li class="current"><a href="#">推荐头像</a></li>
-          <li><a href="#">本地上传</a></li>
+          <li class="tab-local"><a href="#">本地上传</a></li>
         </ul>
         <div class="hp-box-left">
             <div class="hp-recommend active">
@@ -28,13 +28,13 @@
                 <span id="btn_submit" class="btn btn-info hpr-btn">保存</span>
             </div>
             <div class="hp-local">
-                <form action="" method="POST" enctype="multipart/form-data" id="headsImg">
+                <form action="" method="POST" enctype="multipart/form-data" id="headsImg" onsubmit="return headsSave();">
                     <div class="img-error">
-                        <span></span>
+                        <span>123</span>
                     </div>
                     <div class="hl-box">
                         <div id="preview" style="display:inline-block;">
-                            <span><img id="imghead" src='img/headp.jpg'></span>
+                            <span id="preview-img"><img id="imghead" src='img/headp.jpg'></span>
                         </div>
                         <div class="btn_up">
                             <button id="upload_img" class="btn_loadFile btn btn-info">+ 上传头像</button>
@@ -43,7 +43,7 @@
                         <em>每次上传消耗3000金币</em>
                         <span>仅支持JPG、GIF、PNG且文件小于2M，照片尺寸请大于200×200</span>
                     </div>
-                    <button id="btn_submit" class="btn btn-info hpl-btn" onclick="headsSave();">保存</button>
+                    <button id="btn_submit" class="btn btn-info hpl-btn">保存</button>
                 </form>
             </div>
         </div>
