学习中心课程列表

--- a/source/widget/UserHome.perfection/perfect-information.html
+++ b/source/widget/UserHome.perfection/perfect-information.html
@@ -36,7 +36,7 @@ function informationGuid(){
 					cls : 'infor-Modal',
 					content : result
 				}); 
-				$('#informationGuid').modal({0: 'static', keyboard: false,show: true}).find('button.close').remove();
+				$('#informationGuid').modal({backdrop: 'static', keyboard: false,show: true}).find('button.close').remove();
 			}
 		},
 	});
