分页 防止密码重复提交

--- a/source/widget/UM.Nav/index.html
+++ b/source/widget/UM.Nav/index.html
@@ -63,7 +63,7 @@
                     <a href="#">我的余额</a>
                 </li>
                 <li>
-                    <a href="#">代金卡使用</a>
+                    <a href="#">代金卡激活</a>
                 </li>
                 <li>
                     <a href="#">代金卡激活记录</a>
