--- a/source/widget/UM.certificate.binding/index.html
+++ b/source/widget/UM.certificate.binding/index.html
@@ -39,7 +39,7 @@
         <img class="prompt" src="img/prompt.png">
         <div class="cb-prompt-box">
             <h3>提示</h3>
-            <p>如果您对激活听课证有任何疑问，请查看“帮助中心”或拨打：<strong>400-800-2211</strong></p>
+            <p>如果您对激活课程绑定卡有任何疑问，请查看“帮助中心”或拨打：<strong>400-800-2211</strong></p>
         </div>
     </div>
     <!-- 这是jquery库文件 -->
