--- a/source/widget/UserHome.perfection/test.html
+++ b/source/widget/UserHome.perfection/test.html
@@ -16,7 +16,8 @@
 	<style type="text/css">
 	.login-Modal .modal-content{
 		height: 597px;
-		width: 531px;
+		width: 530px;
+		overflow: hidden;
 	}
 	.login-Modal iframe{
 		border: none;
@@ -45,7 +46,7 @@
 	<script type="text/javascript">
 // 欢迎信息
 function loginGuid(){
-	var result = '<div><iframe src="setting.html" width="568" height="576"></iframe></div>';
+	var result = '<iframe src="http://www.xueersi.com/user/register/?123" width="500" height="576"></iframe>';
 	var titlecon = '<h4 class="modal-title">注册</h4>\
 					<span class="modal-title-span">我已注册，现在就去<a href="">登录</a></span>'
 	createModal.show({
