上传头像成功留在当前tab下

--- a/source/widget/UM.bill/index.html
+++ b/source/widget/UM.bill/index.html
@@ -13,7 +13,7 @@
     <!-- 这是当前模块样式文件 -->
     <link href="bill.css" rel="stylesheet"></head>
 <body>
-    <div class="none-content">
+    <div class="bill-none-content">
         <img src="img/none_record.png" alt="">
         <p>开发票的功能正在努力开发中.......</br>   
            如需帮助，请拨打客服电话：<em>400-800-2211</em></p>
