Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/data/Dynamic/coment.html
+++ b/source/data/Dynamic/coment.html
@@ -27,7 +27,7 @@
                   <a href="javascript:void(0);" class="fresh-del-msg" data-params="urlStr=171-3518" data-url="/Homes/ajaxDelDynComment" data-sign="2">删除</a>  
               </span>
                 <span class="fresh-right-btn">
-                  <a title="评论" href="javascript:void(0);">评论</a>
+                  <a title="评论" href="javascript:void(0);" class="fresh-childComment-expand-btn">评论</a>
               </span>
             </div>
         </div>
