--- a/source/widget/Public.MiniCart/index.html
+++ b/source/widget/Public.MiniCart/index.html
@@ -37,7 +37,7 @@
                 <strong class="minicart-title">最新加入的商品</strong>
                 <div class="minicart-items">
                     <ul>
-                        <li class="row">
+                        <li class="row course-info">
                             <div class="course-info col-xs-8">
                                 <h6 class="course-title">
                                     <em class="label label-warning">数学</em>
