--- a/source/widget/Mall.LiveApply/apply.html
+++ b/source/widget/Mall.LiveApply/apply.html
@@ -1,9 +1,12 @@
-<!--
-   报名页面
-    @require apply.less
-    @require apply.js
--->
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="LiveApply.css">
+    <script src="LiveApply.js"></script>
+</head>
+<body>
 <div id="containerItem">
     <div class="apply_container">
         <div class="overview">
@@ -49,3 +52,6 @@
         </div>
     </div>
 </div>
+
+</body>
+</html>
