--- a/source/widget/UserHome.learning/study-course.html
+++ b/source/widget/UserHome.learning/study-course.html
@@ -66,7 +66,7 @@
 						
 						<li class="last">
 							<p class="icon-live icon-tests">
-								<a onclick="chapterTestStart('9864-37284-13228','000526542478d1efe5355ae01880c472')" href="###">本讲测试</a>
+								<a onclick="study.chapterTestStart('9864-37284-13228','000526542478d1efe5355ae01880c472')" href="###">本讲测试</a>
 							</p>
 						</li>
 						<!--************************讲测试判断结束*****************************-->
