--- a/source/widget/UM.head.photo/index.html
+++ b/source/widget/UM.head.photo/index.html
@@ -30,7 +30,10 @@
             <div class="hp-local">
                 <form action="" method="POST" enctype="multipart/form-data" id="headsImg" onsubmit="return headsSave();">
                     <div class="img-error">
-                        <span>123</span>
+                        <span>后端返回上传失败提示</span>
+                    </div>
+                    <div class="img-success">
+                        <span>后端返回成功信息</span>
                     </div>
                     <div class="hl-box">
                         <div id="preview" style="display:inline-block;">
@@ -42,6 +45,7 @@
                         <input id="loadFile" type="file" name="img" class="input_file" onchange="getFullPath(this);" />
                         <em>每次上传消耗3000金币</em>
                         <span>仅支持JPG、GIF、PNG且文件小于2M，照片尺寸请大于200×200</span>
+                        <p>学力等级达到16级，可以免费上传本地头像</p>
                     </div>
                     <button id="btn_submit" class="btn btn-info hpl-btn">保存</button>
                 </form>
@@ -49,18 +53,18 @@
         </div>
         <div class="hp-box-right">
             <h4>预览</h4>
-            <p>您选定的头像会生成3种尺寸，请注意大小尺寸的头像是否清晰</p>
+            <p>您选定的头像会生成3种尺寸，请注意各尺寸的头像是否清晰</p>
             <div id="hp-small">
                 <img src="img/head.photo.png" id="img-small">
-                <span>40*40像素</span>
+                <span>40×40像素</span>
             </div>
             <div id="hp-middle">
                 <img src="img/head.photo.png" id="img-middle">
-                <span>60*60像素</span>
+                <span>60×60像素</span>
             </div>
             <div id="hp-big">
                 <img src="img/head.photo.png" id="img-big">
-                <span>100*100像素</span>
+                <span>100×100像素</span>
             </div>
         </div>
     </div>
